# lambda-s3-cloudflare-purge

./: .gitignore  README.md  jest.config.js  package-lock.json  package.json  samconfig.toml  template.yaml  tsconfig.json
.github/workflows/: ci.yaml
.husky/: pre-commit
cf-purge/: app.py  pyproject.toml  requirements.txt
events/: event.json
src/: index.test.ts  index.ts
tests/: index.test.ts
