[tool.poetry]
name = "cf-purge"
version = "0.2.0"
description = ""
authors = ["Omer Cohen <omer@descope.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "cf_purge"}]

[tool.poetry.dependencies]
python = "^3.9"
urllib3 = "1.26.14"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
